# serializer version: 1
# name: test_all_entities[bosch_radiator_thermostat_ii][climate.radiator_thermostat_ii_m_wohnzimmer-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'hvac_modes': list([
        <HVACMode.HEAT: 'heat'>,
      ]),
      'max_temp': 35,
      'min_temp': 7,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.radiator_thermostat_ii_m_wohnzimmer',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'smartthings',
    'previous_unique_id': None,
    'supported_features': <ClimateEntityFeature: 387>,
    'translation_key': None,
    'unique_id': '286ba274-4093-4bcb-849c-a1a3efe7b1e5',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[bosch_radiator_thermostat_ii][climate.radiator_thermostat_ii_m_wohnzimmer-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 23.9,
      'friendly_name': 'Radiator Thermostat II [+M] Wohnzimmer',
      'hvac_modes': list([
        <HVACMode.HEAT: 'heat'>,
      ]),
      'max_temp': 35,
      'min_temp': 7,
      'supported_features': <ClimateEntityFeature: 387>,
      'target_temp_high': None,
      'target_temp_low': None,
      'temperature': 22.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.radiator_thermostat_ii_m_wohnzimmer',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat',
  })
# ---
# name: test_all_entities[da_ac_rac_000001][climate.ac_office_granit-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'fan_modes': list([
        'auto',
        'low',
        'medium',
        'high',
        'turbo',
      ]),
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.DRY: 'dry'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
        <HVACMode.HEAT: 'heat'>,
      ]),
      'max_temp': 35,
      'min_temp': 7,
      'preset_modes': list([
        'none',
        'wind_free',
      ]),
      'swing_modes': None,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.ac_office_granit',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'smartthings',
    'previous_unique_id': None,
    'supported_features': <ClimateEntityFeature: 441>,
    'translation_key': None,
    'unique_id': '96a5ef74-5832-a84b-f1f7-ca799957065d',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[da_ac_rac_000001][climate.ac_office_granit-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 25,
      'drlc_status_duration': 0,
      'drlc_status_level': -1,
      'drlc_status_override': False,
      'drlc_status_start': '1970-01-01T00:00:00Z',
      'fan_mode': 'low',
      'fan_modes': list([
        'auto',
        'low',
        'medium',
        'high',
        'turbo',
      ]),
      'friendly_name': 'AC Office Granit',
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.DRY: 'dry'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
        <HVACMode.HEAT: 'heat'>,
      ]),
      'max_temp': 35,
      'min_temp': 7,
      'preset_mode': None,
      'preset_modes': list([
        'none',
        'wind_free',
      ]),
      'supported_features': <ClimateEntityFeature: 441>,
      'swing_mode': 'off',
      'swing_modes': None,
      'temperature': 25,
    }),
    'context': <ANY>,
    'entity_id': 'climate.ac_office_granit',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[da_ac_rac_01001][climate.aire_dormitorio_principal-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'fan_modes': list([
        'auto',
        'low',
        'medium',
        'high',
        'turbo',
      ]),
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.DRY: 'dry'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
        <HVACMode.HEAT: 'heat'>,
      ]),
      'max_temp': 35,
      'min_temp': 7,
      'preset_modes': list([
        'none',
        'sleep',
        'quiet',
        'smart',
        'boost',
        'wind_free',
        'wind_free_sleep',
      ]),
      'swing_modes': list([
        'off',
        'vertical',
        'horizontal',
        'both',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.aire_dormitorio_principal',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'smartthings',
    'previous_unique_id': None,
    'supported_features': <ClimateEntityFeature: 441>,
    'translation_key': None,
    'unique_id': '4ece486b-89db-f06a-d54d-748b676b4d8e',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[da_ac_rac_01001][climate.aire_dormitorio_principal-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 27,
      'drlc_status_duration': 0,
      'drlc_status_level': 0,
      'drlc_status_override': False,
      'drlc_status_start': '1970-01-01T00:00:00Z',
      'fan_mode': 'high',
      'fan_modes': list([
        'auto',
        'low',
        'medium',
        'high',
        'turbo',
      ]),
      'friendly_name': 'Aire Dormitorio Principal',
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.DRY: 'dry'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
        <HVACMode.HEAT: 'heat'>,
      ]),
      'max_temp': 35,
      'min_temp': 7,
      'preset_mode': None,
      'preset_modes': list([
        'none',
        'sleep',
        'quiet',
        'smart',
        'boost',
        'wind_free',
        'wind_free_sleep',
      ]),
      'supported_features': <ClimateEntityFeature: 441>,
      'swing_mode': 'off',
      'swing_modes': list([
        'off',
        'vertical',
        'horizontal',
        'both',
      ]),
      'temperature': 23,
    }),
    'context': <ANY>,
    'entity_id': 'climate.aire_dormitorio_principal',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[da_ac_rac_100001][climate.corridor_a_c-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'fan_modes': list([
        'auto',
        'low',
        'medium',
        'high',
        'turbo',
      ]),
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.DRY: 'dry'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
      ]),
      'max_temp': 35,
      'min_temp': 7,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.corridor_a_c',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'smartthings',
    'previous_unique_id': None,
    'supported_features': <ClimateEntityFeature: 393>,
    'translation_key': None,
    'unique_id': 'F8042E25-0E53-0000-0000-000000000000',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[da_ac_rac_100001][climate.corridor_a_c-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 27,
      'fan_mode': 'auto',
      'fan_modes': list([
        'auto',
        'low',
        'medium',
        'high',
        'turbo',
      ]),
      'friendly_name': 'Corridor A/C',
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.DRY: 'dry'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
      ]),
      'max_temp': 35,
      'min_temp': 7,
      'supported_features': <ClimateEntityFeature: 393>,
      'temperature': 18,
    }),
    'context': <ANY>,
    'entity_id': 'climate.corridor_a_c',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[ecobee_thermostat][climate.main_floor-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'fan_modes': list([
        'on',
        'auto',
      ]),
      'hvac_modes': list([
        <HVACMode.COOL: 'cool'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
      ]),
      'max_temp': 35.0,
      'min_temp': 7.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.main_floor',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'smartthings',
    'previous_unique_id': None,
    'supported_features': <ClimateEntityFeature: 395>,
    'translation_key': None,
    'unique_id': '028469cb-6e89-4f14-8d9a-bfbca5e0fbfc',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[ecobee_thermostat][climate.main_floor-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_humidity': 32,
      'current_temperature': 21.7,
      'fan_mode': 'auto',
      'fan_modes': list([
        'on',
        'auto',
      ]),
      'friendly_name': 'Main Floor',
      'hvac_action': <HVACAction.HEATING: 'heating'>,
      'hvac_modes': list([
        <HVACMode.COOL: 'cool'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
      ]),
      'max_temp': 35.0,
      'min_temp': 7.0,
      'supported_features': <ClimateEntityFeature: 395>,
      'target_temp_high': None,
      'target_temp_low': None,
      'temperature': 21.7,
    }),
    'context': <ANY>,
    'entity_id': 'climate.main_floor',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat',
  })
# ---
# name: test_all_entities[ecobee_thermostat_offline][climate.downstairs-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'fan_modes': None,
      'hvac_modes': list([
      ]),
      'max_temp': 35,
      'min_temp': 7,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.downstairs',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'smartthings',
    'previous_unique_id': None,
    'supported_features': <ClimateEntityFeature: 395>,
    'translation_key': None,
    'unique_id': '1888b38f-6246-4f1e-911b-bfcfb66999db',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[ecobee_thermostat_offline][climate.downstairs-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': None,
      'fan_mode': None,
      'fan_modes': None,
      'friendly_name': 'Downstairs',
      'hvac_modes': list([
      ]),
      'max_temp': 35,
      'min_temp': 7,
      'supported_features': <ClimateEntityFeature: 395>,
      'target_temp_high': None,
      'target_temp_low': None,
      'temperature': None,
    }),
    'context': <ANY>,
    'entity_id': 'climate.downstairs',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[generic_ef00_v1][climate.thermostat_kuche-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'hvac_modes': list([
      ]),
      'max_temp': 35,
      'min_temp': 7,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.thermostat_kuche',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'smartthings',
    'previous_unique_id': None,
    'supported_features': <ClimateEntityFeature: 387>,
    'translation_key': None,
    'unique_id': '656569c2-7976-4232-a789-34b4d1176c3a',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[generic_ef00_v1][climate.thermostat_kuche-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 21.0,
      'friendly_name': 'Thermostat Küche',
      'hvac_modes': list([
      ]),
      'max_temp': 35,
      'min_temp': 7,
      'supported_features': <ClimateEntityFeature: 387>,
      'target_temp_high': None,
      'target_temp_low': None,
      'temperature': 23.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.thermostat_kuche',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat',
  })
# ---
# name: test_all_entities[heatit_ztrm3_thermostat][climate.hall_thermostat-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'hvac_modes': list([
        <HVACMode.HEAT: 'heat'>,
      ]),
      'max_temp': 35,
      'min_temp': 7,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.hall_thermostat',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'smartthings',
    'previous_unique_id': None,
    'supported_features': <ClimateEntityFeature: 387>,
    'translation_key': None,
    'unique_id': '69a271f6-6537-4982-8cd9-979866872692',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[heatit_ztrm3_thermostat][climate.hall_thermostat-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 19.0,
      'friendly_name': 'Hall thermostat',
      'hvac_action': <HVACAction.HEATING: 'heating'>,
      'hvac_modes': list([
        <HVACMode.HEAT: 'heat'>,
      ]),
      'max_temp': 35,
      'min_temp': 7,
      'supported_features': <ClimateEntityFeature: 387>,
      'target_temp_high': None,
      'target_temp_low': None,
      'temperature': 19.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.hall_thermostat',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat',
  })
# ---
# name: test_all_entities[virtual_thermostat][climate.asd-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'fan_modes': list([
        'on',
      ]),
      'hvac_modes': list([
      ]),
      'max_temp': 35.0,
      'min_temp': 7.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.asd',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'smartthings',
    'previous_unique_id': None,
    'supported_features': <ClimateEntityFeature: 395>,
    'translation_key': None,
    'unique_id': '2894dc93-0f11-49cc-8a81-3a684cebebf6',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[virtual_thermostat][climate.asd-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 4734.6,
      'fan_mode': 'followschedule',
      'fan_modes': list([
        'on',
      ]),
      'friendly_name': 'asd',
      'hvac_action': <HVACAction.COOLING: 'cooling'>,
      'hvac_modes': list([
      ]),
      'max_temp': 35.0,
      'min_temp': 7.0,
      'supported_features': <ClimateEntityFeature: 395>,
      'target_temp_high': None,
      'target_temp_low': None,
      'temperature': None,
    }),
    'context': <ANY>,
    'entity_id': 'climate.asd',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
